add_subdirectory(temporal)
add_subdirectory(geo)
if(CBUFFER)
  add_subdirectory(cbuffer)
endif()
if(H3)
  add_subdirectory(h3)
endif()
if(JSON)
  add_subdirectory(json)
endif()
if(NPOINT)
  add_subdirectory(npoint)
endif()
if(POSE)
  add_subdirectory(pose)
endif()
if(RGEO)
  add_subdirectory(rgeo)
endif()
