if(NOT MEOS)
  set(lwgeom_transform.c lwgeom_transform.c)
endif()

add_library(liblwgeom OBJECT
  bytebuffer.c
  effectivearea.c
  gbox.c
  gserialized.c
  gserialized1.c
  gserialized2.c
  lookup3.c
  lwalgorithm.c
  lwboundingcircle.c
  lwchaikins.c
  lwcircstring.c
  lwcollection.c
  lwcompound.c
  lwcurvepoly.c
  lwgeodetic.c
  lwgeodetic_tree.c
  lwgeom.c
  lwgeom_api.c
  lwgeom_debug.c
  lwgeom_functions_analytic.c
  lwgeom_geos.c
  lwgeom_geos_clean.c
  lwgeom_geos_cluster.c
  lwgeom_geos_node.c
  lwgeom_geos_split.c
  lwgeom_median.c
  lwgeom_topo.c
  ${lwgeom_transform.c}
  lwgeom_wrapx.c
  lwhomogenize.c
  lwin_encoded_polyline.c
  lwin_geojson.c
  lwin_twkb.c
  lwin_wkb.c
  lwin_wkt.c
  lwin_wkt_lex.c
  lwin_wkt_parse.c
  lwiterator.c
  lwkmeans.c
  lwline.c
  lwlinearreferencing.c
  lwmcurve.c
  lwmline.c
  lwmpoint.c
  lwmpoly.c
  lwmsurface.c
  lwmval.c
  lwout_encoded_polyline.c
  lwout_geojson.c
  lwout_gml.c
  lwout_kml.c
  lwout_svg.c
  lwout_twkb.c
  lwout_wkb.c
  lwout_wkt.c
  lwout_x3d.c
  lwpoint.c
  lwpoly.c
  lwprint.c
  lwpsurface.c
  lwrandom.c
  lwspheroid.c
  lwstroke.c
  lwtin.c
  lwtree.c
  lwtriangle.c
  lwunionfind.c
  lwutil.c
  measures.c
  measures3d.c
  ptarray.c
  stringbuffer.c
  varint.c
  )
