add_library(npoint OBJECT
  tnpoint.c
  tnpoint_aggfuncs.c
  tnpoint_analyze.c
  tnpoint_boxops.c
  tnpoint_distance.c
  tnpoint_indexes.c
  tnpoint_parser.c
  tnpoint_posops.c
  tnpoint_selfuncs.c
  tnpoint_spatialfuncs.c
  tnpoint_spatialrels.c
  tnpoint_static.c
  tnpoint_tempspatialrels.c
  # tnpoint_topoops_meos.c
  # tnpoint_posops_meos.c
  # tnpoint_tempspatialrels_meos.c
  )
